# vulnus-launcher

./: .editorconfig  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  temp_mod_list.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: mac-fix.sh
src/: App.svelte
src-tauri/: Cargo.toml  default_game_settings.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/maps_importer/: Cargo.toml
src-tauri/maps_importer/src/: lib.rs  main.rs
src-tauri/src/: DataHandler.rs  Modding.rs  UserSettings.rs  data_handler.rs  lib.rs  main.rs  user_settings.rs  utils.rs
src/Components/: Modal.svelte  NotificationHandler.svelte  OpenGithub.svelte
src/lib/: DataTypes.ts  IndexPage.svelte  SharedFunctions.ts  StoreData.ts  store.ts
src/lib/pages/: IndexPage.svelte  InfoPage.svelte  ModPage.svelte  SettingsPage.svelte
