[package]
name = "vulnus-launcher"
version = "0.1.0"
description = "app to launch vulnus"
authors = ["luna"]
license = ""
repository = "https://github.com/pozm/vulnus-launcher.git"
default-run = "vulnus-launcher"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["maps_importer"]
[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.5", features = ["api-all"] }
tokio = { version = "1.18.*", features= ["full"] }


futures-util = "0.3.21"

reqwest = {version="0.11.10",features= ["stream","json"] }
zip = "0.6.2"
symlink="0.1.0"
lazy_static="1.4"
chrono = {verson= "0.4.19",features= ["serde"] }
bincode = {version = "2.0.0-rc.1", features = ["serde"] }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
