[package]
name = "maps_importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.10",features= ["stream","json"] }
zip = "0.6.2"
uuid = {version = "1.0.0",features=["v4"]}
tokio = {version = "1.18.1",features=["full"]}